--- a/style.css
+++ b/style.css
@@ -114,3 +114,41 @@ nav .menu a {
     display: block;
   }
 }
+
+/* Hero */
+.hero {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  position: relative;
+}
+.hero .left {
+  background-image: url(images/hero.jpg);
+  background-size: cover;
+  height: 60vh;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.hero .right {
+  background-color: #c8d366;
+}
+.hero .content-box {
+  position: absolute;
+  background-color: #fffffc;
+  padding: 32px;
+  width: 35%;
+  top: 50%;
+  left: 65%;
+  transform: translate(-40%, -50%);
+}
+@media only screen and (max-width: 768px) {
+  .hero {
+    grid-template-columns: 1fr;
+  }
+  .hero .content-box {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    background-color: #fff;
+  }
+}
