--- a/style.css
+++ b/style.css
@@ -181,3 +181,19 @@ main {
     grid-template-columns: 1fr;
   }
 }
+
+/* Pagination */
+.pagination {
+  display: inline-block;
+}
+.pagination .active {
+  border: 1px solid var(--primary-color);
+  background-color: var(--secondary-color);
+}
+.pagination a {
+  color: var(--primary-color);
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 0;
+}
